assets/css/main.css
/* ... */
.main-menu ul li:hover ul.sub-menu,
.main-menu ul li:hover > ul.sub-menu,
.main-menu ul li:hover > .sub-menu {
  display: block !important;
  opacity: 1 !important;
  transform: translateY(0) !important;
  pointer-events: auto !important;
  -webkit-transition: opacity 0.3s ease, transform 0.3s ease !important;
  -moz-transition: opacity 0.3s ease, transform 0.3s ease !important;
  -ms-transition: opacity 0.3s ease, transform 0.3s ease !important;
  -o-transition: opacity 0.3s ease, transform 0.3s ease !important;
  transition: opacity 0.3s ease, transform 0.3s ease !important;
}
.main-menu ul li ul.sub-menu li {
  display: block !important;
  position: relative;
}
.main-menu ul li ul.sub-menu li ul.sub-menu {
  position: absolute !important;
  right: 0;
  left: 100%;
  top: 0;
  z-index: 10000 !important;
  transform: translateX(-15px);
  transform-origin: left center;
  visibility: hidden;
  opacity: 0;
  pointer-events: none;
  -webkit-transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s linear 0.4s;
  -moz-transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s linear 0.4s;
  -ms-transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s linear 0.4s;
  -o-transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s linear 0.4s;
  transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1), transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), visibility 0s linear 0.4s;
}
.main-menu ul li ul.sub-menu li a {
  color: #181818 !important;
  font-size: 14px !important;
  font-family: "Urbanist", sans-serif !important;
  font-weight: 500 !important;
  padding: 14px 25px !important;
  display: block !important;
  transition: all 0.3s ease-in-out;
  width: 100% !important;
}
.main-menu ul li ul.sub-menu li a::before {
  display: none;
}
.main-menu ul li ul.sub-menu li a .sub-menu-arrow {
  float: right;
}
.main-menu ul li ul.sub-menu li a:hover, .main-menu ul li ul.sub-menu li a.active {
  color: white;
  background-color: transparent;
  background: #22AA86;
}
.main-menu ul li ul.sub-menu li:hover > .sub-menu {
  opacity: 1 !important;
  visibility: visible !important;
  transform: translateX(0) !important;
  -webkit-transform: translateX(0) !important;
  -moz-transform: translateX(0) !important;
  -ms-transform: translateX(0) !important;
  -o-transform: translateX(0) !important;
  pointer-events: auto !important;
  -webkit-transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s !important;
  -moz-transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s !important;
  -ms-transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s !important;
  -o-transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s !important;
  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0s !important;
}

.sticky-menu {
  position: fixed;
  background: white;
  top: 0;
  animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
  -webkit-transition: all 0.4s ease 0s;
  -moz-transition: all 0.4s ease 0s;
  -ms-transition: all 0.4s ease 0s;
  -o-transition: all 0.4s ease 0s;
  transition: all 0.4s ease 0s;
  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.05);
  padding-top: 0;
  padding-bottom: 0;
}
.sticky-menu .hamburger-menu {
  top: 17px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .sticky-menu .hamburger-menu {
    top: 35px;
  }
}

.theme-menu-one {
  border-bottom: 2px solid rgba(248, 249, 252, 0.05);
}
.theme-menu-one .main-menu ul li a {
  padding: 24px 0 25px 0;
}
.theme-menu-one .main-menu ul li a::before {
  top: 25px;
}
.theme-menu-one .sticky-menu {
  padding: 15px 0;
}
.theme-menu-one .sticky-menu .menu-list {
  margin: 0;
}
.theme-menu-one .sticky-menu .top__header__info {
  display: none;
}
.theme-menu-one .top__header__info {
  border-bottom: 1px solid rgba(248, 249, 252, 0.05);
}
.theme-menu-one .header-info {
  position: relative;
  z-index: 1010;
}

.custom-border {
  border-left: 2px solid rgba(248, 249, 252, 0.05);
  position: relative;
  z-index: 100;
}

.header-info {
  list-style: none;
}
.header-info > li {
  position: relative;
  z-index: 1;
  padding-left: 55px;
  margin-right: 50px;
}
.header-info > li:first-child {
  padding-left: 0;
}
.header-info > li::before {
  content: "";
  position: absolute;
  height: 40px;
  width: 2px;
  background: white;
  top: 10px;
  right: -55px;
  z-index: 1;
}
.header-info > li:last-child::before {
  display: none;
}
@media only screen and (max-width: 1600px) {
  .header-info > li {
    margin-right: 15px;
    padding-left: 55px;
  }
  .header-info > li::before {
    display: none;
  }
}

.header-info-box {
  display: flex;
  align-items: center;
}
.header-info-box .icon {
  margin-right: 10px;
}
.header-info-box .text-content span {
  color: white;
  font-size: 14px;
  font-weight: 500;
  font-family: "Urbanist", sans-serif;
}
.header-info-box .text-content h6 {
  color: black;
  font-size: 18px;
  line-height: 18px;
  font-family: "Urbanist", sans-serif;
}

.right-language .dropdown {
  line-height: 1;
}
.right-language .language-btn {
  color: white;
  font-size: 18px;
  font-weight: 700;
  line-height: 18px;
}
.right-language .language-btn i {
  color: white;
  font-size: 14px;
  font-weight: 300;
}
.right-language .language-btn::after {
  color: #181818;
}
.right-language .dropdown-menu {
  min-width: 170px;
  padding: 10px 0;
  background: white;
  box-shadow: 0px 25px 50px 0px rgba(213, 216, 223, 0.5);
  border: 1px solid #f8f8f8;
  border-radius: 0;
  top: 20px;
  text-align: left;
}
.right-language .dropdown-menu li {
  display: block;
}
.right-language .dropdown-menu li a {
  display: block;
  padding: 0 15px;
  font-size: 15px;
  color: #181818;
  line-height: 35px;
  text-transform: uppercase;
}
/* ... */

